# mp2-lab4-cluster

./: CMakeLists.txt
include/: proceccor.h  processor.cpp  queue.h
samples/: sample_cluster.cpp
test/: CMakeLists.txt  test_proceccor.cpp  test_queue.cpp
